--- a/scala_text.tex
+++ b/scala_text.tex
@@ -79,6 +79,7 @@
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 
+\usepackage{letltxmacro}
 \usepackage{ifthen}
 \LetLtxMacro\latexincludegraphics\includegraphics
 \makeatletter
